Person management: creation, listing, deletion

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+project_manager_people:
+    resource: "@ProjectManagerPeopleBundle/Resources/config/routing.yml"
+    prefix:   /
+
 project_manager_schedule:
     resource: "@ProjectManagerScheduleBundle/Resources/config/routing.yml"
     prefix:   /
