--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "incenteev/composer-parameter-handler": "~2.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "phpspec/prophecy": "~1.0",
+        "phpunit/phpunit": "4.3.*"
     },
     "scripts": {
         "post-root-package-install": [
