--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,11 @@
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
         "phpspec/prophecy": "~1.0",
-        "phpunit/phpunit": "4.3.*"
+        "phpunit/phpunit": "4.3.*",
+        "behat/behat": "~3.0",
+        "behat/mink": "1.6.*",
+        "behat/mink-goutte-driver": "*",
+        "behat/mink-extension": "*"
     },
     "scripts": {
         "post-root-package-install": [
