Update Behat tests for User Management

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "behat/behat": "~3.0",
         "behat/mink": "1.6.*",
         "behat/mink-goutte-driver": "*",
-        "behat/mink-extension": "*"
+        "behat/mink-extension": "*",
+        "behat/symfony2-extension": "~2.0@dev",
+        "behat/mink-browserkit-driver":  "~1.1@dev"
     },
     "scripts": {
         "post-root-package-install": [
