--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -1,10 +1,12 @@
 default:
     suites:
         default:
-            contexts: [  Behat\MinkExtension\Context\MinkContext ]
+            contexts: 
+                - FeatureContext:
+                    session: '@session'
     extensions:
+        Behat\Symfony2Extension: ~
         Behat\MinkExtension:
-            base_url: http://localhost/
             sessions:
-                first_session:
-                    goutte: ~
+                default:
+                    symfony2: ~
