--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,10 @@
         "phpspec/prophecy": "~1.0",
         "phpunit/phpunit": "4.3.*",
         "behat/behat": "~3.0",
+        "behat/symfony2-extension": "~2.0",
         "behat/mink": "1.6.*",
-        "behat/mink-goutte-driver": "*",
         "behat/mink-extension": "*",
-        "behat/symfony2-extension": "~2.0@dev",
-        "behat/mink-browserkit-driver":  "~1.1@dev"
+        "behat/mink-browserkit-driver": "~1.1"
     },
     "scripts": {
         "post-root-package-install": [
