Update .travis.yml to ckeck the hook

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: php
 php: [ "5.4" ]
 script: bin/behat
+
+before_script:
+    - sudo apt-get update -qq
+    - composer self-update
+    - composer install
+    - echo "- drop database"
+    - php app/console doctrine:database:drop --force -q || true
+    - echo "- create database"
+    - php app/console doctrine:database:create -q
+    - echo "- create SQL schema"
+    - php app/console doctrine:schema:create -q
