Fix new SLInsight remarks

--- a/src/ProjectManager/Bundle/ScheduleBundle/Resources/config/routing.yml
+++ b/src/ProjectManager/Bundle/ScheduleBundle/Resources/config/routing.yml
@@ -1,3 +1,5 @@
 pm_schedule_homepage:
     path:     /
     defaults: { _controller: ProjectManagerScheduleBundle:Schedule:index }
+    requirements:
+        _method:  GET
