Init Projects and Tasks

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+project_manager_project:
+    resource: "@ProjectManagerProjectBundle/Resources/config/routing.yml"
+    prefix:   /
+
 project_manager_people:
     resource: "@ProjectManagerUserBundle/Resources/config/routing.yml"
     prefix:   /
