[User] Update creation and update buttons

--- a/src/ProjectManager/Bundle/UserBundle/Resources/config/routing/user.yml
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/config/routing/user.yml
@@ -1,10 +1,10 @@
-pm_user_update_person:
-    path:     /user/{id}/update/
+pm_user_user_edit:
+    path:     /user/{id}/edit/
     defaults: { _controller: ProjectManagerUserBundle:User:update }
     requirements:
         _method:  GET|POST
 
-pm_user_new_person:
+pm_user_user_add:
     path:     /user/new
     defaults: { _controller: ProjectManagerUserBundle:User:update }
     requirements:
@@ -16,8 +16,8 @@ pm_user_user_list:
     requirements:
         _method:  GET
 
-pm_user_delete_person:
-    path:     /user/{id}/delete/
+pm_user_user_delete:
+    path:     /user/{id}
     defaults: { _controller: ProjectManagerUserBundle:User:delete }
     requirements:
         _method:  DELETE
