--- a/src/ProjectManager/Bundle/ProjectBundle/Resources/config/routing/project.yml
+++ b/src/ProjectManager/Bundle/ProjectBundle/Resources/config/routing/project.yml
@@ -1,5 +1,5 @@
 pm_project_project_list:
-    path:     /project
+    path:     /project/
     defaults: { _controller: ProjectManagerProjectBundle:Project:index }
     requirements:
         _method:  GET
@@ -7,5 +7,17 @@ pm_project_project_list:
 pm_project_project_add:
     path:     /project/new
     defaults: { _controller: ProjectManagerProjectBundle:Project:new }
+    requirements:
+        _method:  GET|POST
+
+pm_project_project_delete:
+    path:     /project/{id}
+    defaults: { _controller: ProjectManagerProjectBundle:Project:delete }
+    requirements:
+        _method:  DELETE
+
+pm_project_project_edit:
+    path:     /project/{id}
+    defaults: { _controller: ProjectManagerProjectBundle:Project:edit }
     requirements:
         _method:  GET|POST
