--- a/src/ProjectManager/Bundle/UserBundle/Resources/config/routing/team.yml
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/config/routing/team.yml
@@ -57,3 +57,9 @@ pm_user_teammember_team_member_add_members:
     defaults: { _controller: ProjectManagerUserBundle:TeamMember:addMembersToTeam }
     requirements:
         _method:  GET|POST
+
+pm_user_teammember_delete:
+    path:     /teammember/{teamId}/{id}/
+    defaults: { _controller: ProjectManagerUserBundle:TeamMember:delete }
+    requirements:
+        _method:  DELETE
