#6 Tasks: Add links on calendar and task edition

--- a/src/ProjectManager/Bundle/ProjectBundle/Resources/config/routing/task.yml
+++ b/src/ProjectManager/Bundle/ProjectBundle/Resources/config/routing/task.yml
@@ -1,17 +1,29 @@
 pm_project_task_list:
-    path:     /project/{projectId}/tasks
+    path:     /project/{projectId}/task
     defaults: { _controller: ProjectManagerProjectBundle:Task:index }
     requirements:
         _method:  GET
 
 pm_project_task_delete:
-    path:     /project/{projectId}/tasks/{id}
+    path:     /project/{projectId}/task/{id}
     defaults: { _controller: ProjectManagerProjectBundle:Task:delete }
     requirements:
         _method:  DELETE
 
 pm_project_task_add:
-    path:     /project/{projectId}/tasks/new
+    path:     /project/{projectId}/task/new
     defaults: { _controller: ProjectManagerProjectBundle:Task:new }
+    requirements:
+        _method:  GET|POST
+
+pm_project_task_edit_by_project:
+    path:     /project/{projectId}/task/{taskId}
+    defaults: { _controller: ProjectManagerProjectBundle:Task:edit }
+    requirements:
+        _method:  GET|POST
+
+pm_project_task_edit:
+    path:     /project/task/{taskId}
+    defaults: { _controller: ProjectManagerProjectBundle:Task:edit }
     requirements:
         _method:  GET|POST
