--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "homepage": "https://github.com/yoanngesquiere/projectmanager",
   "devDependencies": {
     "gulp": "~3.8.10",
+    "gulp-load-plugins": "~0.8.0",
+    "gulp-browserify": "~0.5.0",
+    "reactify": "~0.15.2",
+    "rimraf": "~2.2.8",
     "react": "~0.12.0",
     "bootstrap": "~3.3.2"
   }
