--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "gulp": "~3.8.10",
     "gulp-load-plugins": "~0.8.0",
     "gulp-browserify": "~0.5.0",
+    "gulp-util": "~3.0.1",
+    "gulp-if": "~1.2.5",
+    "gulp-uglify": "~1.0.1",
     "reactify": "~0.15.2",
     "rimraf": "~2.2.8",
     "react": "~0.12.0",
