--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "gulp-browserify": "~0.5.0",
     "gulp-util": "~3.0.1",
     "gulp-if": "~1.2.5",
+    "gulp-less": "~1.3.6",
+    "gulp-csso": "~0.2.9",
     "gulp-uglify": "~1.0.1",
+    "gulp-minify-css": "~0.4.3",
+    "gulp-concat-css": "~2.0.0",
     "reactify": "~0.15.2",
     "rimraf": "~2.2.8",
     "react": "~0.12.0",
+    "jquery": "~2.1.3",
     "bootstrap": "~3.3.2"
   }
 }
