--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,13 @@
         "sensio/generator-bundle": "~2.3",
         "phpspec/prophecy": "~1.0",
         "phpunit/phpunit": "4.3.*",
+        "instaclick/php-webdriver": "*",
         "behat/behat": "~3.0",
         "behat/symfony2-extension": "~2.0",
-        "behat/mink": "1.6.*",
+        "behat/mink": "1.7.*@dev",
         "behat/mink-extension": "*",
-        "behat/mink-browserkit-driver": "~1.1"
+        "behat/mink-browserkit-driver": "~1.1",
+        "behat/mink-selenium2-driver": "1.3.*@dev"
     },
     "scripts": {
         "post-root-package-install": [
