--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -15,10 +15,10 @@ default:
     extensions:
         Behat\Symfony2Extension: ~
         Behat\MinkExtension:
-            base_url: 'http://localhost'
+            base_url: 'http://127.0.0.1'
             sessions:
                 default:
                     symfony2: ~
                 selenium2:
                     selenium2:
-                        wd_host: "http://localhost:4444/wd/hub"
+                        wd_host: "http://127.0.0.1:4444/wd/hub"
