--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -15,7 +15,7 @@ default:
     extensions:
         Behat\Symfony2Extension: ~
         Behat\MinkExtension:
-            base_url: 'http://127.0.0.1'
+            base_url: 'http://127.0.0.1/web/app_dev.php/'
             sessions:
                 default:
                     symfony2: ~
