--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ before_script:
     - php app/console doctrine:schema:create -q
     - cp behat.yml.dist behat.yml
 
+    # configure apache virtual hosts
+    - sudo cp -f .travis.vhost.conf /etc/apache2/sites-available/default
+    - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default
+    - sudo service apache2 restart
+
     # Firefox
     - sudo apt-get install -y --force-yes firefox
     
