--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "projectmanager",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Project management tool",
   "repository": {
     "type": "git",
@@ -11,18 +11,19 @@
   "devDependencies": {
     "gulp": "~3.8.10",
     "gulp-load-plugins": "~0.8.0",
-    "gulp-browserify": "~0.5.0",
+    "browserify": "~9.0.0",
     "gulp-util": "~3.0.1",
     "gulp-if": "~1.2.5",
-    "gulp-less": "~1.3.6",
-    "gulp-csso": "~0.2.9",
-    "gulp-uglify": "~1.0.1",
+    "gulp-less": "~3.0.0",
+    "gulp-csso": "~1.0.0",
+    "gulp-uglify": "~1.1.0",
     "gulp-minify-css": "~0.4.3",
-    "gulp-concat-css": "~2.0.0",
-    "reactify": "~0.15.2",
-    "rimraf": "~2.2.8",
-    "react": "~0.12.0",
+    "gulp-concat-css": "~2.1.0",
+    "reactify": "~1.1",
+    "rimraf": "~2.3.0",
+    "react": "~0.13.0",
     "jquery": "~2.1.3",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "lodash": "~3.5.0"
   }
 }
