--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "gulp-less": "~3.0.0",
     "gulp-csso": "~1.0.0",
     "gulp-uglify": "~1.1.0",
-    "gulp-minify-css": "~0.4.3",
+    "gulp-minify-css": "~1.0.0",
     "gulp-concat-css": "~2.1.0",
+    "gulp-streamify": "~0.0.5",
     "reactify": "~1.1",
     "rimraf": "~2.3.0",
     "react": "~0.13.0",
