[#10] First day of the week is now a parameter

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,6 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+project_manager_schedule:
+    first_weekday: 1
