--- a/src/ProjectManager/Bundle/UserBundle/Resources/config/routing/user.yml
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/config/routing/user.yml
@@ -1,23 +1,19 @@
 pm_user_user_edit:
     path:     /user/{id}/edit/
     defaults: { _controller: ProjectManagerUserBundle:User:update }
-    requirements:
-        _method:  GET|POST
+    methods:  [GET,POST]
 
 pm_user_user_add:
     path:     /user/new
     defaults: { _controller: ProjectManagerUserBundle:User:update }
-    requirements:
-        _method:  GET|POST
+    methods:  [GET,POST]
 
 pm_user_user_list:
     path:     /user/
     defaults: { _controller: ProjectManagerUserBundle:User:index }
-    requirements:
-        _method:  GET
+    methods:  [GET]
 
 pm_user_user_delete:
     path:     /user/{id}
     defaults: { _controller: ProjectManagerUserBundle:User:delete }
-    requirements:
-        _method:  DELETE
+    methods:  [DELETE]
